objects/ProductUsageStatistics__c.object
<CustomObject>
    <description>SFDC1-7972 This object is created for capturing product usage by the user</description>
    <fields>
        <fullName>HitCount__c</fullName>
        <description>SFDC1-6785 Number of times logged in</description>
        <inlineHelpText>Provides a roll up of the number of times the user hits the system in a day.</inlineHelpText>
        <label>Hit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-6785: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (user unfriendly) referencing the source record and is populated via migrating system.</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDProductUsageStatistics__c</fullName>
        <description>SFDC1-6785 PKID is used for data migration support from the legacy system</description>
        <displayFormat>Usg{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>PKID is used for data migration support from the legacy system and is auto-generated</inlineHelpText>
        <label>PKID ProductUsageStatistics</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductLicense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6785 Link related to License to this usage</description>
        <inlineHelpText>Link the related Product License to this Usage record.</inlineHelpText>
        <label>Product License</label>
        <referenceTo>ProductLicense__c</referenceTo>
        <relationshipLabel>Product Usage Statistics</relationshipLabel>
        <relationshipName>ProductUsageStatistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductLogin__c</fullName>
        <description>SFDC1-6785 User related to this usage</description>
        <inlineHelpText>Link the related Product Login to this Usage record.</inlineHelpText>
        <label>Product Login</label>
        <referenceTo>ProductLogin__c</referenceTo>
        <relationshipLabel>Product Usage Statistics</relationshipLabel>
        <relationshipName>ProductUsageStatistics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SoftwareVersion__c</fullName>
        <description>SFDC1-6785 Version of software used</description>
        <externalId>true</externalId>
        <inlineHelpText>Tracks the last software version last used.</inlineHelpText>
        <label>Software Version</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>SFDC1-6785 Source of the usage data</description>
        <inlineHelpText>Data can only be uploaded automatically from external entitlement and authentications systems.</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UserXS</fullName>
                </value>
                <value>
                    <fullName>MSF</fullName>
                </value>
                <value>
                    <fullName>USERXS-MARKIT</fullName>
                </value>
                <value>
                    <fullName>USERXS-TRADE-MANAGER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueExternalSystemID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-6785 Unique System ID for the external system</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique System ID for the external system</inlineHelpText>
        <label>Unique External System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UsageDate__c</fullName>
        <description>SFDC1- 6785 Date of usage</description>
        <inlineHelpText>Usage can be tracked on a daily roll-up or can be insterted per instance or a Product Login.</inlineHelpText>
        <label>Usage Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Product Usage Statistics</label>
    <nameField>
        <displayFormat>USG-{000000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Usage Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>